<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Invengo</string>
    <string name="welcome_title">Welcome to use</string>
    <string name="system_title">Invengo NFC Demo</string>
    <string name="content_description">Please approach a NFC tag!</string>
    <string name="menu_about">About</string>
    <string name="menu_common">通用演示</string>
    <string name="dialog_notice_text">NFC function is disabled!Please open it!</string>
    <string name="dialog_notice_title">Note</string>
    <string name="dialog_notice_ok">OK</string>
    <string name="dialog_notice_cancel">Cancel</string>
    <string name="progress_dialog_title">Authentication</string>
    <string name="toast_nfc_disabled">移动终端无NFC功能!</string>
    <string name="toast_network_disabled">Network Unconnected!</string>
    <string name="toast_tag_unconnected">NFC Tag Unconnected.Please try again!</string>
    <string name="toast_tag_send_failure">Send command failure!</string>
    <string name="toast_tag_authenticate_success">NFC Tag Authenticate Success!</string>
    <string name="toast_tag_authenticate_failure">Product Authenticate Failure in the Back End!</string>
    <string name="toast_tag_server_connect_failure">连接后台服务器失败!</string>
    <string name="toast_tag_server_connect_timeout_failure">连接后台服务器超时!</string>
    <string name="toast_tag_server_connect_io_failure">解析后台服务器数据失败!</string>
    <string name="toast_tag_server_connect_url_failure">连接后台服务器失败!</string>
    <string name="toast_tag_server_failure">后台服务器查找数据失败!</string>
    <string name="toast_tag_tracing_failure">产品溯源查询失败!</string>
    <string name="toast_tag_detected">标签已发现</string>
    
    <string name="text_view_authenticate_uid">UID:</string>
    <string name="text_view_authenticate_success">Success!</string>
    <string name="text_view_authenticate_failure">验证失败!</string>
    <string name="text_view_failure_reason_title">失败原因:</string>
    <string name="text_view_name">名称:</string>
    <string name="text_view_producer">制造商:</string>
    <string name="text_view_type">类型:</string>
    <string name="text_view_tax">批次:</string>
    <string name="text_view_address">产地:</string>
    <string name="text_view_phone">电话:</string>
    <string name="button_text_query">溯源查询</string>
    <string name="text_view_authenticate_number">验证次数:</string>
    <string name="text_view_authenticate_time">验证时间:</string>
    <string name="title_activity_authenticate">防伪认证</string>
    <string name="title_activity_tracing">溯源查询</string>
    <string name="tracing_text_view_authenticate_success">溯源成功</string>
    <string name="text_view_tracing_failure">溯源失败</string>
    <string name="text_view_tracing_failure_reason_title">失败原因:</string>
    <string name="tracing_text_view_producer_date">生产日期:</string>
    <string name="tracing_text_view_in_date">入库时间:</string>
    <string name="tracing_text_view_person_in_charge">联系人:</string>
    <string name="tracing_text_view_person_phone">联系方式:</string>
    <string name="tracing_text_view_sale_place">销售地点:</string>
    <string name="tracing_text_view_sale_date">销售时间:</string>
    <string name="tracing_text_view_seller">代理商:</string>
    <string name="tracing_text_view_seller_phone">联系方式:</string>
    <string name="button_text_back">返回主界面</string>
    <string name="button_text_tracing_back">返回上一层</string>
    <string name="version_number">版本号</string>
    <string name="version_number_detail">V1.0.0</string>
    <string name="version_copyright">版权</string>
    <string name="version_copyright_detail">Copyright © 2016 深圳市远望谷信息技术股份有限公司</string>
    <string name="version_description">系统描述</string>
    <string name="version_description_detail">基于远望谷XC-IHT1401 NFC标签防伪溯源演示系统，具备标签认证防伪、溯源功能</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_version_show">关于系统</string>
    <string name="image_content_description">Hello world!</string>
    <string name="title_activity_common_nfc">通用演示</string>
    
    <string name="app_name_dohia">多喜爱</string>
    <string name="title_activity_dohia_nfc">RFID防伪查询系统</string>
    <string name="toast_dohia_failure">该商品未通过认证，请重新核实！</string>

   	<string name="list_tech_tag_id_label">标签UID</string>
   	<string name="list_tech_tag_id_text">Tag_Id Content</string>
   	<string name="list_tech_tag_type_text">Tag_Type Content</string>
   	<string name="list_tech_tag_type_label">标签类型</string>
    
</resources>