<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    	
    	<TextView android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="2"
	        android:layout_marginLeft="8dp"
	        android:layout_marginTop="10dp"
    	    android:text="@string/list_tech_tag_id_label"/>
        
	    <TextView android:id="@+id/list_tech_tag_id"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        android:layout_marginLeft="30dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/list_tech_tag_id_text"/>
        
    </LinearLayout>
    
	<LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    	
    	<TextView android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="2"
	        android:layout_marginLeft="8dp"
	        android:layout_marginTop="10dp"
    	    android:text="@string/list_tech_tag_type_label"/>
        
	    <TextView android:id="@+id/list_tech_tag_type_id"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="3"
	        android:layout_marginLeft="24dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/list_tech_tag_type_text"/>
        
    </LinearLayout>
        
</LinearLayout>