<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    
    <LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
	        >
			<TextView 
			    android:layout_width="70dp"
			    android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="5dp"
		        android:textSize="16sp"
			    android:text="@string/version_number"
			    />	           	
	    </LinearLayout>
	    
	    <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
	        >
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="5dp"
		        android:textSize="16sp"
			    android:text="@string/version_number_detail"
			    />	           	
	    </LinearLayout>
	</LinearLayout>
	
    <LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
	        >
			<TextView 
			    android:layout_width="70dp"
			    android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="5dp"
		        android:textSize="16sp"
		    android:text="@string/version_copyright"
			    />	           	
	    </LinearLayout>
	    
	    <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
	        >
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="5dp"
		        android:textSize="16sp"
		    android:text="@string/version_copyright_detail"
			    />	           	
	    </LinearLayout>
	</LinearLayout>

    <LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
	        >
			<TextView 
			    android:layout_width="70dp"
			    android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="5dp"
		        android:textSize="16sp"
		    	android:text="@string/version_description"
			    />	           	
	    </LinearLayout>
	    
	    <LinearLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
	        >
			<TextView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="5dp"
		        android:textSize="16sp"
		    	android:text="@string/version_description_detail"
			    />	           	
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>