<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".AuthenticateFailureActivity" >
	
    <LinearLayout 
        android:orientation="horizontal"
		android:id="@+id/linear_layout_failure_result_id"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
        <ImageView 
            android:adjustViewBounds="true"
            android:maxWidth="20dp"
            android:maxHeight="20dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/failure"
	        android:layout_marginLeft="2dp"
	        android:layout_marginTop="4dp"
			android:contentDescription="@string/content_description"
			android:background="@drawable/imageview_background"
            />
        
	    <TextView 
	        android:id="@+id/text_view_failure_result_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:layout_marginLeft="5dp"
	        android:layout_marginTop="2dp"
	        android:text="@string/text_view_authenticate_failure"/>
        
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	    	android:textSize="16sp"
	    	android:layout_marginLeft="5dp"
	        android:layout_marginTop="2dp"
	        android:text="@string/text_view_authenticate_uid"
	        />
	    <TextView 
			android:id="@+id/text_view_authenticate_failure_uid_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:layout_marginLeft="2dp"
	        android:layout_marginTop="2dp"
	        />
	    
    </LinearLayout>
    
   	<ImageView 
	    android:id="@+id/divider_view_failure_result_id"
	    android:layout_below="@id/linear_layout_failure_result_id"
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="2dp"
	    android:background="#14626C"
	    android:contentDescription="@string/content_description"
	    />

   	<LinearLayout 
   	    android:orientation="vertical"
   	    android:id="@+id/linear_layout_failure_reason_id"
   	    android:layout_below="@id/divider_view_failure_result_id"
   	    android:layout_alignLeft="@id/divider_view_failure_result_id"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    >
   	    
   	    <TextView 
   	        android:id="@+id/text_view_failure_reason_title_id"
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:text="@string/text_view_failure_reason_title"
   	        android:textSize="16sp"
   	        android:layout_marginTop="5dp"
   	        android:layout_marginLeft="2dp"
   	        />
   	    
   	    <TextView 
   	        android:id="@+id/text_view_failure_reason_detail_id"
   	        android:layout_width="match_parent"
   	        android:layout_height="wrap_content"
   	        android:textSize="16sp"
   	        android:layout_marginTop="5dp"
   	        android:layout_marginLeft="2dp"
   	        />
   	    
   	</LinearLayout>
   	
   	<ImageView 
	    android:id="@+id/divider_view_failure_back_id"
	    android:layout_below="@id/linear_layout_failure_reason_id"
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:layout_marginTop="2dp"
	    android:background="#14626C"
	    android:contentDescription="@string/content_description"
	    />
   	
   	<Button 
   	    android:id="@+id/button_failure_back_id"
   	    android:layout_below="@id/divider_view_failure_back_id"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="2dp"
        android:background="@drawable/button_background"
        android:text="@string/button_text_back" />
    
</RelativeLayout>